# Demos

./: .gitignore  README.md
stock-spread-model/: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
stock-spread-model/app/: app.py
stock-spread-model/data/: spacex_order_data.csv
stock-spread-model/src/spread_predictor/: constants.py  data_loader.py  features.py  model.py  pipeline.py
stock-spread-model/tests/: test_features.py
